- Fixed a problem with loading some .dds volume textures (LinearSize field appears to be
  incorrect on some images).
- Fixed a problem loading some .tga files.
- Added more checks to determine if a .dds file has a volume texture in it.
- Added ilGetDXTCData().
- Fixed some RLE .sgi loading bugs.
- Added direct S3TC/DXTC to OpenGL code.
- Added ILUT_DIRECT3D8 for use with ilutRenderer.




1.4.2
-----

- Fixed a crash with the .psp code and a large memory leak.
- Fixed .gif loading, even loading animations better than I did with libungif.
- Added the static library workspace to /projects/msvc/static.
- Fixed another Mac OS X compilation problem.
- Removed references to libungif.


1.4.0
-----

- Fixed .dds volume texture support.
- Wrote the VolTex test application that writes out the individual slices of a volume texture.
- Changed the internal iConvertImage to make things much nicer.
- Fixed iluRotate so that it works on colour-indexed images.
- Added ilGetAlpha().
- Added iluInvertAlpha().
- Fixed Halo palette loading (didn't close the file handle after reading).
- Added .act palette support (Adobe Color Table).
- Added support for the Paint Shop Pro file format (.psp).
- Added the last bit of code to load TIFF files from memory buffers.
- Fixed the out-of-date Intel JPEG Library support.
- Rewrote .gif support.
- Fixed some problems with the Mac OS X compilation.
- Added Sam's fixes for .jpg and .bmp handling.


1.3.1
-----

- Fixed a huge ilLoadPal() bug.
- Disabled SDL (hopefully temporarily) to get rid of their main() mangling.
- Fixed greyscale .bmp saving bug.
- Removed the iluScaleTest() declaration.


1.3.0
-----

- Reworked sources tree.
- Updated *nix support, now uses autoconf/automake.
- Optimized ilCopyPixels and ilSetPixels if the destination and source formats/types are the same (suggestion by Kenneth Hurley).
- Fixed an ilSetPixels memory leak.
- Fixed the Big Endian versions of GetLittleFloat and GetLittleDouble.